# auto-finetune

./: .coverage  .coveragerc  .gitignore  AUTOHARVEST.md  HARVEST.md  README.md  REBOOT-RECOVERY.md  TRANSFER.md  classifier-validation.md  config.yaml  launch-next.sh  post-queue.sh  post-reboot-check.sh  post-reboot-gpu-train.sh  pyproject.toml  requirements.txt  skill-autofinetune.md  skill-autoharvest.md
eval/: BENCHMARK.md  probe.jsonl
src/: analyze.py  audit.py  auto_balance.py  bench.py  binarize.py  clean.py  cli.py  config.py  contrast.py  cost.py  dataset_version.py  db.py  dedup.py  deploy.py  dpo.py  drivers_localchat.py  eval.py  extract_hermes.py  extract_opencode.py  fleet.py  format_dataset.py  harvest.py  locking.py  merge.py  metrics.py  notify.py  parsers.py  pretokenize.py  profile.py  quantize.py  registry.py  repair_mix.py  scheduler.py  smoke_rocm.py  subagent.py  train.py  validate_classifier.py  verify.py  verify_exec.py  verify_gap.py
tests/: conftest.py  test_analyze.py  test_audit.py  test_autoharvest.py  test_balance_version_cost.py  test_bench.py  test_bench_matrix.py  test_binarize.py  test_clean.py  test_cli.py  test_cli_dispatch.py  test_cli_helpers.py  test_config.py  test_contrast.py  test_cpu_heavy.py  test_db.py  test_dpo.py  test_drivers_localchat.py  test_eval.py  test_eval_helpers.py  test_extract.py  test_extract_hermes_helpers.py  test_extract_opencode_db.py  test_extract_opencode_helpers.py  test_fleet.py  test_format_dataset.py  test_format_dataset_helpers.py  test_format_dataset_io.py  test_format_helpers.py  test_locking.py  (+10 more)
(+4 files in other folders)
