[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-finetune"
version = "0.1.0"
description = "Pipeline to harvest agent sessions and finetune a coding-agent model."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/smoke_rocm.py", "src/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    'if __name__ == .__main__.:',
]
